--- a/kafka-rest.yml
+++ b/kafka-rest.yml
@@ -141,18 +141,18 @@ services:
       STREAMS_BOOTSTRAP_SERVERS: broker:29092
       STREAMS_SCHEMA_REGISTRY_HOST: schema-registry
       STREAMS_SCHEMA_REGISTRY_PORT: 8081
-
-  rest-proxy:
-    image: confluentinc/cp-kafka-rest:7.5.0
-    depends_on:
-      - broker
-      - schema-registry
+  zilla:
+    image: ghcr.io/aklivity/zilla:latest
+    container_name: zilla
+    pull_policy: always
+    restart: unless-stopped
     ports:
-      - 8082:8082
-    hostname: rest-proxy
-    container_name: rest-proxy
+      - 7114:7114
+      - 7143:7143
     environment:
-      KAFKA_REST_HOST_NAME: rest-proxy
-      KAFKA_REST_BOOTSTRAP_SERVERS: 'broker:29092'
-      KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
-      KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
+      KAFKA_HOST: broker
+      KAFKA_PORT: 9092
+    volumes:
+      - ./zilla.yaml:/etc/zilla/zilla.yaml
+      # - ./tls/localhost.p12:/etc/zilla/secrets.tls.data.localhost.p12
+    command: start -v -e
