--- a/zilla.yaml
+++ b/zilla.yaml
@@ -1,111 +1,80 @@
----
-name: example
-# vaults:
-#   my_servers:
-#     type: filesystem
-#     options:
-#       keys:
-#         store: tls/localhost.p12
-#         type: pkcs12
-#         password: ${{env.KEYSTORE_PASSWORD}}
+name: SSE-example
 bindings:
+
+# Proxy service entrypoint
   north_tcp_server:
     type: tcp
     kind: server
     options:
       host: 0.0.0.0
-      port:
-        - 7143
-        - 7114
-    routes:
-        - when:
-            - port: 7143
-          exit: north_tls_server
-        - when:
-            - port: 7114
-          exit: north_http_server
-  north_tls_server:
-    type: tls
-    kind: server
-    # vault: my_servers
-    options:
-      keys:
-        - localhost
-      sni:
-        - localhost
-      alpn:
-        - http/1.1
-        - h2
+      port: 7114
     exit: north_http_server
   north_http_server:
     type: http
     kind: server
+    options:
+      access-control:
+        policy: cross-origin
     routes:
       - when:
           - headers:
               :scheme: http
               :authority: localhost:7114
+              :path: /events
+        exit: north_sse_server
+      - when:
           - headers:
-              :scheme: https
-              :authority: localhost:7143
-        exit: north_http_kafka_mapping
-  north_http_kafka_mapping:
-    type: http-kafka
+              :scheme: http
+              :authority: localhost:7114
+        exit: east_http_filesystem_mapping
+
+# UI html file server
+  east_http_filesystem_mapping:
+    type: http-filesystem
     kind: proxy
     routes:
       - when:
-          - method: POST
-            path: /items
-        exit: north_kafka_cache_client
+          - path: /{path}
         with:
-          capability: produce
-          topic: items-snapshots
-          key: ${idempotencyKey}
+          path: ${params.path}
+        exit: east_filesystem_server
+  east_filesystem_server:
+    type: filesystem
+    kind: server
+    options:
+      location: /var/www/
+
+# SSE Server With an exit to Kafka
+  north_sse_server:
+    type: sse
+    kind: server
+    exit: north_sse_kafka_mapping
+  north_sse_kafka_mapping:
+    type: sse-kafka
+    kind: proxy
+    routes:
       - when:
-          - method: PUT
-            path: /items/{id}
-        exit: north_kafka_cache_client
+          - path: /events
         with:
-          capability: produce
-          topic: items-snapshots
-          key: ${params.id}
-      - when:
-          - method: DELETE
-            path: /items/{id}
-        exit: north_kafka_cache_client
-        with:
-          capability: produce
-          topic: items-snapshots
-          key: ${params.id}
-      - when:
-          - method: GET
-            path: /items
-        exit: north_kafka_cache_client
-        with:
-          capability: fetch
-          topic: items-snapshots
-          merge:
-            content-type: application/json
-      - when:
-          - method: GET
-            path: /items/{id}
-        exit: north_kafka_cache_client
-        with:
-          capability: fetch
-          topic: items-snapshots
+          topic: events
           filters:
-            - key: ${params.id}
+            - key: ${params.key}
+        exit: north_kafka_cache_client
+
+# Kafka sync layer
   north_kafka_cache_client:
     type: kafka
     kind: cache_client
-    options:
-      bootstrap:
-        - items-snapshots
     exit: south_kafka_cache_server
   south_kafka_cache_server:
     type: kafka
     kind: cache_server
+    options:
+      bootstrap:
+        - events
     exit: south_kafka_client
+
+# Connect to local Kafka
   south_kafka_client:
     type: kafka
     kind: client
@@ -114,8 +83,9 @@ bindings:
     type: tcp
     kind: client
     options:
-      host: broker
-      port: 29092
+      host: ${{env.KAFKA_HOST}}
+      port: ${{env.KAFKA_PORT}}
     routes:
       - when:
           - cidr: 0.0.0.0/0
+
